swift: Add dbus monitor policy configurations
Swift has two power supplies, same as Witherspoon, therefore will use
the same power supply policy configuration.

Swift and Witherspoon will also share the event policy configuration for
OCC throttling.

The thermal policy configuration will be shared between Swift and
Witherspoon, but may change for air cooled Swift to not also shutdown at
3 or more cores over 115C.

The fan policy configurations will be different for Swift, therefore
they will be separate. At this time, there are some areas unknown on how
fan presence and functional states will be handled for both air and
water cooled Swift machines, so these are configured to be the same.

Tested:
    Built witherspoon phosphor-dbus-monitor resulting in no image change
    Built swift phosphor-dbus-monitor resulting in correct policies

(From meta-ibm rev: fd06a2cbfd5f6e43aba4887ae1398984410d52cc)

Change-Id: I1125f00ecd51c23aac2da4cd2a47432ac3bc2de7
Signed-off-by: Matthew Barth <msbarth@us.ibm.com>
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-ibm/meta-witherspoon/recipes-phosphor/fans/thermal-policy/thermal-policy.yaml
+++ b/meta-ibm/meta-witherspoon/recipes-phosphor/fans/thermal-policy/thermal-policy.yaml
@@ -1,12 +1,12 @@
-# Witherspoon thermal policy for PDM.
+# Machine thermal policy for PDM.
 #
-# Shut down a Witherspoon system if more than three POWER9 cores
+# Shut down the system if more than three cores
 # have a temperature greater than 115 degrees Celcius.
 
 
 - name: core sensors
   description: >
-    'Witherspoon has two POWER9 chips with 24 cores each.'
+    'The machine has two processor chips with 24 cores each.'
   class: group
   group: path
   members:
