--- a/meta-quanta/meta-runbmc-nuvoton/conf/layer.conf
+++ b/meta-quanta/meta-runbmc-nuvoton/conf/layer.conf
@@ -7,4 +7,4 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 
 BBFILE_COLLECTIONS += "runbmc-nuvoton-layer"
 BBFILE_PATTERN_runbmc-nuvoton-layer := "^${LAYERDIR}/"
-LAYERSERIES_COMPAT_runbmc-nuvoton-layer = "thud warrior"
+LAYERSERIES_COMPAT_runbmc-nuvoton-layer = "warrior zeus"
