Build full phosphor rootfs into witherspoon-tacoma
(From meta-ibm rev: fd1276f3a466058f0f0adbbbc6de889c0ceff9ac)

Change-Id: I6d9db69525486e394a3e4757d3173284d0b07109
Signed-off-by: Andrew Geissler <geissonator@yahoo.com>
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-ibm/meta-witherspoon/conf/machine/witherspoon-tacoma.conf
+++ b/meta-ibm/meta-witherspoon/conf/machine/witherspoon-tacoma.conf
@@ -7,6 +7,7 @@ require conf/machine/include/openpower.inc
 require conf/machine/include/p9.inc
 
 IMAGE_FSTYPES = "cpio.lzma"
+INITRAMFS_IMAGE = "obmc-phosphor-image"
 
 SERIAL_CONSOLES = "115200;ttyS4"
 
