meta-intel: add zeus compatibility
(From meta-intel rev: afeaa26538a9859e2475b323cb9c94363c1c6b80)

Change-Id: Icb50d99bab3d5ae3cebe8bc874a292c0bbe7e655
Signed-off-by: James Feist <james.feist@linux.intel.com>
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-intel/conf/layer.conf
+++ b/meta-intel/conf/layer.conf
@@ -8,4 +8,4 @@ BBFILES += "${LAYERDIR}/meta-common/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "intel"
 BBFILE_PATTERN_intel = ""
 LAYERVERSION_intel = "1"
-LAYERSERIES_COMPAT_intel = "thud warrior"
+LAYERSERIES_COMPAT_intel = "warrior zeus"
