ibm: tacoma: enable standard phosphor nor images
Set the flash size so we get 128MiB images.

Remove INITRAMFS and IMAGE_FSTYPES overrides so we get the standard
phosphor images.

(From meta-ibm rev: 1c12470b1ea14d6b043e0b214e800b974d10a36d)

Change-Id: Ic941879b882aae809693a7901f3af95d23db5d05
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-ibm/meta-witherspoon/conf/machine/witherspoon-tacoma.conf
+++ b/meta-ibm/meta-witherspoon/conf/machine/witherspoon-tacoma.conf
@@ -3,11 +3,9 @@ UBOOT_MACHINE = "evb-ast2600_defconfig"
 
 MACHINEOVERRIDES =. "ibm-ac-server:witherspoon:"
 require conf/machine/include/ast2600.inc
+require conf/machine/include/obmc-bsp-common.inc
 require conf/machine/include/openpower.inc
 require conf/machine/include/p9.inc
-
-IMAGE_FSTYPES = "cpio.lzma"
-INITRAMFS_IMAGE = "obmc-phosphor-image"
 
 SERIAL_CONSOLES = "115200;ttyS4"
 
@@ -23,3 +21,5 @@ PREFERRED_PROVIDER_virtual/phosphor-fan-control-fan-config_df-mrw = \
     "phosphor-fan-control-fan-config"
 PREFERRED_PROVIDER_virtual/phosphor-fan-presence-config_df-mrw = \
     "phosphor-fan-presence-config"
+
+FLASH_SIZE = "131072"
