Extra argument to IPMI parsers
This commit adds an option to the invocation of IPMI
MRW parsers within the IBM layer to allow them to
parse an incomplete MRW.

The extra option is only enabled for the Rainier machine.

Tested:
I updated rainier.conf to point to the in progress Rainier
MRW and made sure that with the new option in the recipe, the
IPMI parsers no longer complained about a broken MRW.

(From meta-ibm rev: 7c056f4b459fa67dc911b40e14055b86dbf1ef46)

Signed-off-by: Santosh Puranik <santosh.puranik@in.ibm.com>
Change-Id: I4482a09c93ab727b7330946f61e52a8ec92753fc
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-ibm/meta-witherspoon/conf/machine/rainier.conf
+++ b/meta-ibm/meta-witherspoon/conf/machine/rainier.conf
@@ -21,3 +21,4 @@ PREFERRED_PROVIDER_virtual/phosphor-fan-presence-config_df-mrw = \
     "phosphor-fan-presence-config"
 
 FLASH_SIZE = "131072"
+SKIP_BROKEN_MRW = "1"
