meta-quanta: meta-runbmc-nuvoton: rename meta-olympus-nuvoton
For avoid confusing this layer only with RUNBMC module
(https://www.opencompute.org/documents/ocp-runbmc-daughterboard-card-
design-specification-v1-4-1-pdf)

The meta-runbmc-nuvoton will rename meta-olympus-nuvoton.
That means the Quanta Olympus product with RUNBMC module which based on
Nuvoton SoC.

The layer configuration will binding Olympus product hardware design.

(From meta-quanta rev: f4a8e7ae48dc788fa7e52f024578c67f164c8620)

Change-Id: I6faa1bfbb3b8f033239fea3c41e8b8ed18fc492d
Signed-off-by: Samuel Jiang <Samuel.Jiang@quantatw.com>
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-quanta/meta-olympus-nuvoton/conf/layer.conf
+++ b/meta-quanta/meta-olympus-nuvoton/conf/layer.conf
@@ -5,6 +5,6 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "runbmc-nuvoton-layer"
-BBFILE_PATTERN_runbmc-nuvoton-layer := "^${LAYERDIR}/"
-LAYERSERIES_COMPAT_runbmc-nuvoton-layer = "warrior zeus"
+BBFILE_COLLECTIONS += "olympus-nuvoton-layer"
+BBFILE_PATTERN_olympus-nuvoton-layer := "^${LAYERDIR}/"
+LAYERSERIES_COMPAT_olympus-nuvoton-layer = "warrior zeus"
