meta-quanta: olympus-nuvoton: specify IGPS_MACHINE
This variable determines which XML image configuration files will be
used from npcm7xx-igps.

(From meta-quanta rev: 5d54cbf770d5701f0973fcfb8b49ed751532ddd0)

Change-Id: Ic269c8d44e1ea5a0d323ac66e419002307c19051
Signed-off-by: Benjamin Fair <benjaminfair@google.com>
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-quanta/meta-olympus-nuvoton/conf/machine/olympus-nuvoton.conf
+++ b/meta-quanta/meta-olympus-nuvoton/conf/machine/olympus-nuvoton.conf
@@ -11,6 +11,7 @@ FLASH_ROFS_OFFSET = "8192"
 FLASH_RWFS_OFFSET = "29696"
 
 UBOOT_MACHINE = "PolegRunBMC_defconfig"
+IGPS_MACHINE = "RunBMC"
 
 IMAGE_FSTYPES += " cpio.${INITRAMFS_CTYPE}.u-boot"
 IMAGE_FSTYPES += " mtd-ubi-tar"
