meta-quanta: olympus-nuvoton: linux: enable new leds config
Enable Linux LED support, this allows control of supported LEDs
from both userspace and optionally.

(From meta-quanta rev: da09ffd483adad0ca1ed97fef553938d6f738ebf)

Signed-off-by: Joseph Liu <kwliu@nuvoton.com>
Change-Id: Ib0c7b2777ec98ae15bc3ff68554085bbb0d00655
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>

--- a/meta-quanta/meta-olympus-nuvoton/recipes-kernel/linux/linux-nuvoton/olympus-nuvoton.cfg
+++ b/meta-quanta/meta-olympus-nuvoton/recipes-kernel/linux/linux-nuvoton/olympus-nuvoton.cfg
@@ -17,6 +17,7 @@ CONFIG_IIO_MUX=y
 CONFIG_NPCM_ADC=y
 CONFIG_SENSORS_IIO_HWMON=y
 
+CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_TRIGGERS=y
