witherspoon-tacoma.conf: Build an ext4 image
Build an ext4 rootfs image for tacoma to be used in its eMMC chip.

(From meta-ibm rev: 211b39b9b2de6bf558c03b9cf92824d3408a52b9)

Change-Id: I45d6435b7caf7e3f28fc6a8a47a40bc62e96fb20
Signed-off-by: Adriana Kobylak <anoo@us.ibm.com>
Signed-off-by: Andrew Geissler <geissonator@yahoo.com>

--- a/meta-ibm/meta-witherspoon/conf/machine/witherspoon-tacoma.conf
+++ b/meta-ibm/meta-witherspoon/conf/machine/witherspoon-tacoma.conf
@@ -1,6 +1,8 @@
 KERNEL_DEVICETREE = "aspeed-bmc-opp-tacoma.dtb"
 UBOOT_MACHINE = "evb-ast2600_defconfig"
 
+IMAGE_FSTYPES += "ext4"
+
 OBMC_POWER_SUPPLY_INSTANCES = "0 1"
 
 MACHINEOVERRIDES =. "ibm-ac-server:witherspoon:"
