--- a/meta-ibm/meta-witherspoon/conf/machine/witherspoon-tacoma.conf
+++ b/meta-ibm/meta-witherspoon/conf/machine/witherspoon-tacoma.conf
@@ -1,5 +1,6 @@
 KERNEL_DEVICETREE = "aspeed-bmc-opp-tacoma.dtb"
-UBOOT_MACHINE = "evb-ast2600_defconfig"
+UBOOT_MACHINE = "ast2600_openbmc_defconfig"
+UBOOT_DEVICETREE = "ast2600-tacoma"
 
 IMAGE_FSTYPES += "ext4"
 
