Add DHCP D-Bus objects for Hypervisor Virtual Management Interface
This commit adds the D-Bus objects to enable the DHCP on the
hypervisor's virtual management interface.
New attributes are :
1. DHCPEnabled - At Interface level.
                 Values will be "v4/v6/both/none". Default is "none"
2. Enabled - At IPv4 object level : To indicate if the
             Virtual Management Interface has consumed the IP
             address or not.

Tested By:
1. busctl introspect xyz.openbmc_project.Settings /xyz/openbmc_project/network/hypervisor
2. busctl introspect xyz.openbmc_project.Settings /xyz/openbmc_project/network/hypervisor/eth0
3. busctl introspect xyz.openbmc_project.Settings /xyz/openbmc_project/network/hypervisor/eth0/ipv4/addr0
4. On rainier : similar tests for eth1

(From meta-ibm rev: 988412a2463a58f85f50648f9497a8779203087e)

Signed-off-by: Sunitha Harish <sunithaharish04@gmail.com>
Change-Id: I734347a8953cd11955eeaacfd67b815810587046
Signed-off-by: Andrew Geissler <geissonator@yahoo.com>

--- a/meta-ibm/recipes-phosphor/settings/phosphor-settings-manager/HypervisorInterface-default-tacoma.override.yml
+++ b/meta-ibm/recipes-phosphor/settings/phosphor-settings-manager/HypervisorInterface-default-tacoma.override.yml
@@ -14,6 +14,10 @@
               Validation:
                   Type: "regex"
                   Validator: '^([0-9A-Fa-f]{2}[:-]){5}([0-9A-Fa-f]{2})$'
+    - Interface: xyz.openbmc_project.Network.EthernetInterface
+      Properties:
+          DHCPEnabled:
+              Default: EthernetInterface::DHCPConf::none
 
 /xyz/openbmc_project/network/hypervisor/eth0/ipv4/addr0:
     - Interface: xyz.openbmc_project.Network.IP
@@ -30,5 +34,8 @@
               Default: IP::AddressOrigin::Static
           Type:
               Default: IP::Protocol::IPv4
-
+    - Interface: xyz.openbmc_project.Object.Enable
+      Properties:
+          Enabled:
+              Default: 'false'
 
