--- a/meta-ibm/meta-witherspoon/conf/machine/witherspoon-tacoma.conf
+++ b/meta-ibm/meta-witherspoon/conf/machine/witherspoon-tacoma.conf
@@ -2,7 +2,9 @@ KERNEL_DEVICETREE = "aspeed-bmc-opp-tacoma.dtb"
 UBOOT_MACHINE = "ast2600_openbmc_defconfig"
 UBOOT_DEVICETREE = "ast2600-tacoma"
 
-IMAGE_FSTYPES += "ext4 mmc-ext4-tar"
+IMAGE_FSTYPES += "wic.xz mmc-ext4-tar"
+KERNEL_IMAGETYPES += "zImage"
+IMAGE_BOOT_FILES = "zImage ${KERNEL_DEVICETREE};aspeed-bmc.dtb"
 
 OBMC_POWER_SUPPLY_INSTANCES = "0 1"
 
