dharshan - Config changes

--- a/meta-facebook/meta-yosemitev2/conf/machine/yosemitev2.conf
+++ b/meta-facebook/meta-yosemitev2/conf/machine/yosemitev2.conf
@@ -22,4 +22,6 @@ PREFERRED_PROVIDER_virtual/obmc-host-ctl ?= ""
 PREFERRED_PROVIDER_virtual/obmc-system-mgmt = "packagegroup-fb-apps"
 FLASH_SIZE = "32768"
 VIRTUAL-RUNTIME_skeleton_workbook = "${MACHINE}-config"
+VIRTUAL-RUNTIME_obmc-host-state-manager = "x86-power-control"
+VIRTUAL-RUNTIME_obmc-chassis-state-manager = "x86-power-control"
 
