u-boot-aspeed: Generate default env for eMMC
Generate a default environment to boot an eMMC based on a txt
file. Populate the generated environment image into the eMMC.

(From meta-aspeed rev: fdc603c73b2dc8851ce2d1684e9c71a5ce51a5b8)

Change-Id: I93944b183b7907202b02854e931593d62603ae77
Signed-off-by: Adriana Kobylak <anoo@us.ibm.com>
Signed-off-by: Andrew Geissler <geissonator@yahoo.com>

--- a/meta-aspeed/wic/emmc-aspeed.wks.in
+++ b/meta-aspeed/wic/emmc-aspeed.wks.in
@@ -21,7 +21,7 @@
 
 bootloader --ptable gpt
 
-part --align 4 --fixed-size 1M --label u-boot-env
+part --align 4 --fixed-size 1M --source rawcopy --sourceparams="file=${DEPLOY_DIR_IMAGE}/u-boot-env.bin"
 part --fstype=ext4 --fixed-size 64M --source bootimg-partition --label boot-a
 part --fstype=ext4 --fixed-size 64M --source bootimg-partition --label boot-b
 part --fstype=ext4 --fixed-size 1G --source rootfs --label rofs-a
