meta-quanta: gbs: expose more GPIO signals as IPMI SDR
1. monitor more GPIO signals

gpio_net_name / gpio_number:
['SATA0_PRSNT_N']=5
['HSBP_CABLE_PRSNT_BUF_N']=57
['FAN_BRD_CABLE_PRSNT_BUF']=58
['HSBP_P12V_STBY_CABLE_PRSNT']=69
['PE_SLOT0_PRSNT_N']=120
['PE_SLOT1_PRSNT_N']=121

2. add these GPIO signals to the sensor YAML config

(From meta-quanta rev: de864a90b91c72a9d31a36688d744a12926a57b3)

Signed-off-by: George Hung <george.hung@quantatw.com>
Change-Id: Ie39512763757e222ca386349a4c45af135500d65
Signed-off-by: Andrew Geissler <geissonator@yahoo.com>

--- a/meta-quanta/meta-gbs/recipes-gbs/gbs-detect-gpio-present/files/detect-gpio-present.service
+++ b/meta-quanta/meta-gbs/recipes-gbs/gbs-detect-gpio-present/files/detect-gpio-present.service
@@ -1,10 +1,10 @@
 [Unit]
-Description=Detect SAS Cable Manager
-Wants=phosphor-gpio-presence@.service
+Description=Detect GPIO Present Manager
 After=phosphor-gpio-presence@.service
+Requires=phosphor-gpio-presence@.service
 
 [Service]
-ExecStart=/usr/bin/detect-sas-cable.sh
+ExecStart=/usr/bin/detect-gpio-present.sh
 StandardOutput=syslog
 Type=simple
 
