meta-gbs: update some sensors m value/threshold/GAIN/sensor type
1. update max31725 temperature threshold
2. add adm1272 power GAIN
3. update vddcr_cpu_in/out current threshold
4. update pwrgd_pvpp/pwrgd_pvddio/pwrgd_cpuvr voltage threshold
5. update p12v_fan_in/out current threshold
6. add p12v_mobo_in/p12v_fan_in current GAIN
7. update p1v8_stby voltage m value
8. update vddcr_cpu_in current m value
9. update hotswap_iout current m value
10.nvme pwr_dis/en sensor type 0x00 -> 0xC0

(From meta-quanta rev: 444a37116b4902b0efffc1c013fc5f6ebf60aa69)

Signed-off-by: George Hung <george.hung@quantatw.com>
Change-Id: Iac993f356a7b3fa8647973479477e5a5ce82655f
Signed-off-by: Andrew Geissler <geissonator@yahoo.com>

--- a/meta-quanta/meta-gbs/recipes-phosphor/configuration/gbs-yaml-config/gbs-ipmi-sensors.yaml
+++ b/meta-quanta/meta-gbs/recipes-phosphor/configuration/gbs-yaml-config/gbs-ipmi-sensors.yaml
@@ -154,7 +154,7 @@
   sensorType: 0x02
   path: /xyz/openbmc_project/sensors/voltage/p1v8_stby
   sensorReadingType: 0x01
-  multiplierM: 235
+  multiplierM: 78
   offsetB: 0
   bExp: 0
   rExp: -4
@@ -295,7 +295,7 @@
   sensorType: 0x03
   path: /xyz/openbmc_project/sensors/current/vddcr_cpu_in
   sensorReadingType: 0x01
-  multiplierM: 78
+  multiplierM: 86
   rExp: -3
   unit: xyz.openbmc_project.Sensor.Value.Unit.Amperes
   mutability: Mutability::Read
@@ -313,8 +313,8 @@
   <<: *current
   entityInstance: 0x15
   path: /xyz/openbmc_project/sensors/current/vddcr_cpu_out
-  multiplierM: 98
-  rExp: -2
+  multiplierM: 1
+  rExp: 0
 
 # PVDDCR_SOC0
 0x3E:
@@ -483,7 +483,7 @@
   entityID: 0x0E
   entityInstance: 0x02
   path: /xyz/openbmc_project/sensors/current/hotswap_iout
-  multiplierM: 353
+  multiplierM: 216
   rExp: -3
 
 0x70:
@@ -883,7 +883,7 @@
 0xC0: &nvme_power
   entityID: 0x04
   entityInstance: 0x40
-  sensorType: 0x00
+  sensorType: 0xC0
   path: /xyz/openbmc_project/control/nvme/u2_0_pwr_dis
   sensorReadingType: 0x03
   mutability: Mutability::Write|Mutability::Read
