--- a/meta-quanta/meta-gbs/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/i2c@8c000/vrm@5d.conf
+++ b/meta-quanta/meta-gbs/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/i2c@8c000/vrm@5d.conf
@@ -21,18 +21,20 @@ GAIN_in2 = "5.02"
 PWRONMON_in2 = "ON"
 
 LABEL_curr1 = "p12v_fan_in"
-CRITHI_curr1 = "22000"
+CRITHI_curr1 = "30000"
 CRITLO_curr1 = "0"
-WARNHI_curr1 = "22000"
+WARNHI_curr1 = "30000"
 WARNLO_curr1 = "0"
 MINVALUE_curr1 = "0"
 MAXVALUE_curr1 = "35"
+# READ_Iin is direct value*0.5
+GAIN_curr1 = "0.5"
 PWRONMON_curr1 = "ON"
 
 LABEL_curr2 = "p12v_fan_out"
-CRITHI_curr2 = "88000"
+CRITHI_curr2 = "100000"
 CRITLO_curr2 = "0"
-WARNHI_curr2 = "88000"
+WARNHI_curr2 = "100000"
 WARNLO_curr2 = "0"
 MINVALUE_curr2 = "0"
 MAXVALUE_curr2 = "150"
