--- a/meta-quanta/meta-gbs/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/i2c@88000/adm1272@10.conf
+++ b/meta-quanta/meta-gbs/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/i2c@88000/adm1272@10.conf
@@ -21,6 +21,8 @@ WARNHI_curr1= "40000"
 WARNLO_curr1= "0"
 MINVALUE_curr1 = "0"
 MAXVALUE_curr1 = "55"
+# READ_Iout is direct value*0.98
+GAIN_curr1 = "0.98"
 
 LABEL_power1= "hotswap_pout"
 CRITHI_power1= "1920000000"
@@ -29,3 +31,5 @@ WARNHI_power1= "1920000000"
 WARNLO_power1= "0"
 MINVALUE_power1 = "0"
 MAXVALUE_power1 = "2200"
+# READ_Pout is direct value*0.98
+GAIN_power1 = "0.98"
