--- a/meta-quanta/meta-gbs/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/i2c@8c000/vrm@5e.conf
+++ b/meta-quanta/meta-gbs/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/i2c@8c000/vrm@5e.conf
@@ -27,6 +27,8 @@ WARNHI_curr1 = "30000"
 WARNLO_curr1 = "0"
 MINVALUE_curr1 = "0"
 MAXVALUE_curr1 = "35"
+# READ_Iin is direct value*0.5
+GAIN_curr1 = "0.5"
 PWRONMON_curr1 = "ON"
 
 LABEL_curr2 = "p12v_mobo_out"
