--- a/meta-quanta/meta-gbs/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/i2c@88000/adm1272@10.conf
+++ b/meta-quanta/meta-gbs/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/i2c@88000/adm1272@10.conf
@@ -33,3 +33,11 @@ MINVALUE_power1 = "0"
 MAXVALUE_power1 = "2200"
 # READ_Pout is direct value*0.98
 GAIN_power1 = "0.98"
+
+LABEL_temp1= "hotswap"
+WARNLO_temp1= "0"
+WARNHI_temp1= "125000"
+CRITHI_temp1 = "125000"
+CRITLO_temp1 = "0"
+MINVALUE_temp1 = "-128"
+MAXVALUE_temp1 = "127"
