--- a/meta-quanta/meta-gbs/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/i2c@8c000/vrm@5e.conf
+++ b/meta-quanta/meta-gbs/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/i2c@8c000/vrm@5e.conf
@@ -39,3 +39,12 @@ WARNLO_curr2 = "0"
 MINVALUE_curr2 = "0"
 MAXVALUE_curr2 = "150"
 PWRONMON_curr2 = "ON"
+
+LABEL_temp1= "p12v_mobo"
+WARNLO_temp1= "0"
+WARNHI_temp1= "125000"
+CRITHI_temp1 = "125000"
+CRITLO_temp1 = "0"
+MINVALUE_temp1 = "-128"
+MAXVALUE_temp1 = "127"
+PWRONMON_temp1 = "ON"
