meta-ibm: rainier: add processor include
Prior to this patch the Rainier system doesn't include any host
processor configuration.  Rainier is a server with a host processor, so
include the correct host processor configuration.

(From meta-ibm rev: 5b44384b92419673b1ce7cca40c5dc613cc6d60a)

Change-Id: I3da77be772c3cd0f89539c8e56c5d0719ad84c44
Signed-off-by: Brad Bishop <bradleyb@fuzziesquirrel.com>
Signed-off-by: Andrew Geissler <geissonator@yahoo.com>

--- a/meta-ibm/conf/machine/rainier.conf
+++ b/meta-ibm/conf/machine/rainier.conf
@@ -7,6 +7,7 @@ OBMC_POWER_SUPPLY_INSTANCES = "0 1 2 3"
 require conf/machine/include/ast2600.inc
 require conf/machine/include/obmc-bsp-common.inc
 require conf/machine/include/openpower.inc
+include conf/machine/include/ibm-power10-cpu.inc
 require conf/distro/include/openpower-virtual-pnor.inc
 require conf/distro/include/phosphor-mmc.inc
 
