meta-quanta: gbs: adjust max34451/p3v_bat_adc threshold/GAIN
max34451:

adjust pwrgd_pvpp/pwrgd_pvddio/pwrgd_cpuvr GAIN/threshold
to show normal value

p3v_bat_adc:

adjust GAIN to meet the deviation requirement

(From meta-quanta rev: 47decce839819001140663ed8eed71ffb31efa2b)

Signed-off-by: George Hung <george.hung@quantatw.com>
Change-Id: Ia30c6abe2f95490d52d01052289ed86178b7cdce
Signed-off-by: Andrew Geissler <geissonator@yahoo.com>

--- a/meta-quanta/meta-gbs/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/i2c@8c000/max34451@4e.conf
+++ b/meta-quanta/meta-gbs/recipes-phosphor/sensors/phosphor-hwmon/obmc/hwmon/ahb/apb/i2c@8c000/max34451@4e.conf
@@ -62,31 +62,34 @@ MAXVALUE_in7 = "4"
 PWRONMON_in7 = "ON"
 
 LABEL_in8 = "pwrgd_pvpp"
-CRITHI_in8 = "3600"
-CRITLO_in8 = "1000"
-WARNHI_in8 = "3600"
-WARNLO_in8 = "1000"
+CRITHI_in8 = "5760"
+CRITLO_in8 = "1600"
+WARNHI_in8 = "5760"
+WARNLO_in8 = "1600"
 MINVALUE_in8 = "0"
-MAXVALUE_in8 = "4"
+MAXVALUE_in8 = "6"
 PWRONMON_in8 = "ON"
+GAIN_in8 = "1.60"
 
 LABEL_in9 = "pwrgd_pvddio"
-CRITHI_in9 = "3600"
-CRITLO_in9 = "1000"
-WARNHI_in9 = "3600"
-WARNLO_in9 = "1000"
+CRITHI_in9 = "5760"
+CRITLO_in9 = "1600"
+WARNHI_in9 = "5760"
+WARNLO_in9 = "1600"
 MINVALUE_in9 = "0"
-MAXVALUE_in9 = "4"
+MAXVALUE_in9 = "6"
 PWRONMON_in9 = "ON"
+GAIN_in9 = "1.60"
 
 LABEL_in10 = "pwrgd_cpuvr"
-CRITHI_in10 = "3600"
-CRITLO_in10 = "1000"
-WARNHI_in10 = "3600"
-WARNLO_in10 = "1000"
+CRITHI_in10 = "5760"
+CRITLO_in10 = "1600"
+WARNHI_in10 = "5760"
+WARNLO_in10 = "1600"
 MINVALUE_in10 = "0"
-MAXVALUE_in10 = "4"
+MAXVALUE_in10 = "6"
 PWRONMON_in10 = "ON"
+GAIN_in10 = "1.60"
 
 LABEL_in11 = "p3v3_stby"
 CRITHI_in11 = "3465"
