rainier: do not install ikvm
rainier systems do not utilize this feature

(From meta-ibm rev: dcfa1a4d7ad4065d983e3bf77cc88d5167492e9d)

Change-Id: I0a9b430c8245016237c0f168781ecf0b68438f96
Signed-off-by: Andrew Geissler <geissonator@yahoo.com>

--- a/meta-ibm/conf/machine/rainier.conf
+++ b/meta-ibm/conf/machine/rainier.conf
@@ -28,3 +28,5 @@ PREFERRED_PROVIDER_virtual/phosphor-fan-presence-config_df-mrw = \
     "phosphor-fan-presence-config"
 
 SKIP_BROKEN_MRW = "1"
+
+IMAGE_FEATURES_remove = "obmc-ikvm"
