witherspoon-tacoma: do not install ikvm
witherspoon-tacoma systems do not utilize this feature

(From meta-ibm rev: b32849212c59c6383543ba769b8b4f6e2fbbc48b)

Signed-off-by: Andrew Geissler <geissonator@yahoo.com>
Change-Id: I59c5b19b6ad140447f5cdf4184db5acf251c2842
Signed-off-by: Andrew Geissler <geissonator@yahoo.com>

--- a/meta-ibm/conf/machine/witherspoon-tacoma.conf
+++ b/meta-ibm/conf/machine/witherspoon-tacoma.conf
@@ -34,3 +34,5 @@ PREFERRED_PROVIDER_virtual/phosphor-fan-presence-config_df-mrw = \
 # last partition (hostfw) was made configurable. The default size of the hostfw
 # partition is 5GB, therefore setting it to 4GB for Tacoma.
 WKS_HOSTFW_SIZE = "4G"
+
+IMAGE_FEATURES_remove = "obmc-ikvm"
