--- a/meta-ibm/conf/machine/witherspoon-tacoma.conf
+++ b/meta-ibm/conf/machine/witherspoon-tacoma.conf
@@ -1,6 +1,7 @@
 KERNEL_DEVICETREE = "aspeed-bmc-opp-tacoma.dtb"
-UBOOT_MACHINE = "ast2600_openbmc_defconfig"
+UBOOT_MACHINE = "ast2600_openbmc_spl_defconfig"
 UBOOT_DEVICETREE = "ast2600-tacoma"
+SPL_BINARY = "spl/u-boot-spl.bin"
 
 OBMC_POWER_SUPPLY_INSTANCES = "0 1"
 
